MSL-520: cassandra configuration