@@ -3,171 +3,166 @@ package com.kenzan.msl.catalog.edge.services;
 import com.datastax.driver.core.ResultSet;
 import com.datastax.driver.mapping.Result;
 import com.google.common.base.Optional;
-import com.kenzan.msl.account.client.services.CassandraAccountService;
+import com.kenzan.msl.account.client.dto.ArtistsByUserDto;
 import com.kenzan.msl.catalog.client.cassandra.QueryAccessor;
 import com.kenzan.msl.catalog.client.dto.SongsAlbumsByArtistDto;
 import com.kenzan.msl.catalog.client.services.CassandraCatalogService;
 import com.kenzan.msl.catalog.edge.TestConstants;
+import com.kenzan.msl.catalog.edge.translate.Translators;
+import com.kenzan.msl.common.ContentType;
 import com.kenzan.msl.common.bo.ArtistBo;
-import com.kenzan.msl.ratings.client.dto.AverageRatingsDto;
+import com.kenzan.msl.common.bo.ArtistListBo;
 import com.kenzan.msl.ratings.client.services.CassandraRatingsService;
-import org.easymock.EasyMock;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.powermock.api.easymock.PowerMock;
+import org.mockito.Mockito;
+import org.mockito.runners.MockitoJUnitRunner;
 import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
 import rx.Observable;
 
-import java.util.UUID;
-
-import static org.easymock.EasyMock.createMock;
-import static org.easymock.EasyMock.expect;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.atLeastOnce;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Matchers.anyObject;
+import static org.mockito.Matchers.eq;
+import static org.mockito.Mockito.times;
 
-@RunWith(PowerMockRunner.class)
-@PrepareForTest({CassandraRatingsService.class, CassandraAccountService.class,
-    CassandraCatalogService.class})
-public class ArtistsServiceTest {
+@RunWith(MockitoJUnitRunner.class)
+public class ArtistsServiceTest extends TestConstants {
 
-  private TestConstants tc = TestConstants.getInstance();
-
-  private CassandraCatalogService cassandraCatalogService;
-
-  private CassandraRatingsService cassandraRatingsService;
-  private CassandraAccountService cassandraAccountService;
-  private Observable<ResultSet> observableResultSet;
 
   @Mock
-  private LibraryHelper libraryhelper;
+  private Result<SongsAlbumsByArtistDto> songsAlbumsByArtistDtos;
+  @Mock
+  private Result<ArtistsByUserDto> artistsByUserDtos;
+  @Mock
+  private ArtistListBo artistListBo;
   @Mock
   private QueryAccessor queryAccessor;
+  @Mock
+  private Paginator paginator;
+  @Mock
+  private ResultSet resultSet;
+
+  @Mock
+  private CassandraCatalogService cassandraCatalogService;
+  @Mock
+  private CassandraRatingsService cassandraRatingsService;
+  @Mock
+  private LibraryHelper libraryHelper;
   @InjectMocks
-  private ArtistsService artistsService = new ArtistsService();
+  private ArtistsService artistsService;
 
   @Before
   public void init() throws Exception {
-    ResultSet resultSet = createMock(ResultSet.class);
-    observableResultSet = Observable.just(resultSet);
-    queryAccessor = mock(QueryAccessor.class);
-
-    PowerMock.mockStatic(CassandraCatalogService.class);
-    cassandraCatalogService = createMock(CassandraCatalogService.class);
-
-    PowerMock.mockStatic(CassandraAccountService.class);
-    cassandraAccountService = createMock(CassandraAccountService.class);
-    PowerMock.expectNew(CassandraAccountService.class).andReturn(cassandraAccountService);
-
-    expect(CassandraAccountService.getInstance()).andReturn(cassandraAccountService).anyTimes();
+    PowerMockito.mockStatic(Translators.class);
   }
 
   @Test
-  public void testGetArtist() throws Exception {
-    expect(cassandraCatalogService.getSongsAlbumsByArtist(tc.ALBUM_ID, Optional.absent()))
-        .andReturn(observableResultSet);
+  public void getArtistTest() {
+    Mockito.when(cassandraCatalogService.getSongsAlbumsByArtist(ARTIST_ID, Optional.absent()))
+        .thenReturn(Observable.just(resultSet));
+    Mockito.when(cassandraCatalogService.mapSongsAlbumsByArtist(anyObject())).thenReturn(
+        Observable.just(songsAlbumsByArtistDtos));
+    Mockito.when(songsAlbumsByArtistDtos.one()).thenReturn(songsAlbumsByArtistDto);
 
-    Result<SongsAlbumsByArtistDto> songsAlbumsByArtistDtoResult = PowerMockito.mock(Result.class);
-    expect(cassandraCatalogService.mapSongsAlbumsByArtist(observableResultSet)).andReturn(
-        Observable.just(songsAlbumsByArtistDtoResult));
+    Mockito.when(libraryHelper.getUserArtists(eq(USER_ID))).thenReturn(artistsByUserDtos);
+    Mockito.when(cassandraRatingsService.getAverageRating(ARTIST_ID, ContentType.ARTIST.value))
+        .thenReturn(
+            Observable.just(Optional.of(getMockAverageRatingsDto(ARTIST_ID,
+                ContentType.ARTIST.value))));
+    Mockito.when(
+        cassandraRatingsService.getUserRating(USER_ID, ContentType.ARTIST.value, ARTIST_ID))
+        .thenReturn(
+            Observable.just(Optional.of(getMockUserRatings(ARTIST_ID, ContentType.ARTIST.value))));
 
-    PowerMockito.when(songsAlbumsByArtistDtoResult.one()).thenReturn(tc.songsAlbumsByArtistDto);
+    Optional<ArtistBo> response = artistsService.getArtist(Optional.of(USER_ID), ARTIST_ID);
 
-    mockRatingsHelper();
-
-    AverageRatingsDto averageRatingsDto = new AverageRatingsDto();
-    averageRatingsDto.setNumRating(new Long(2));
-    averageRatingsDto.setSumRating(new Long(4));
-    expect(
-        cassandraRatingsService.getAverageRating(EasyMock.anyObject(UUID.class),
-            EasyMock.anyString())).andReturn(Observable.just(Optional.of(averageRatingsDto)));
-
-    EasyMock.replay(cassandraRatingsService);
-    EasyMock.replay(cassandraCatalogService);
-    EasyMock.replay(cassandraAccountService);
-    PowerMock.replayAll();
-
-    /* *************************************************** */
-
-    Optional<ArtistBo> results =
-        artistsService.getArtist(cassandraCatalogService, Optional.absent(), tc.ALBUM_ID);
-    assertNotNull(results);
-    assertTrue(results.isPresent());
-    assertEquals(results.get().getArtistId(), tc.ARTIST_ID);
-    assertEquals(results.get().getArtistName(), tc.ARTIST_NAME);
-    assertEquals(results.get().getAverageRating(), new Integer(2));
+    Mockito.verify(libraryHelper, times(1)).processLibraryArtistInfo(anyObject(), anyObject());
+    assertTrue(response.get().getAverageRating() == (int) (Long.valueOf(123) / Long.valueOf(123)));
+    assertEquals(response.get().getPersonalRating(), Integer.valueOf(10));
   }
 
   @Test
-  public void testGetNullArtist() {
-    expect(cassandraCatalogService.getSongsAlbumsByArtist(tc.ARTIST_ID, Optional.absent()))
-        .andReturn(observableResultSet);
-    expect(cassandraCatalogService.mapSongsAlbumsByArtist(observableResultSet)).andReturn(
+  public void getArtistTestEmptyMappingResults() {
+    Mockito.when(cassandraCatalogService.getSongsAlbumsByArtist(ARTIST_ID, Optional.absent()))
+        .thenReturn(Observable.just(resultSet));
+    Mockito.when(cassandraCatalogService.mapSongsAlbumsByArtist(anyObject())).thenReturn(
         Observable.just(null));
+    Optional<ArtistBo> response = artistsService.getArtist(Optional.of(USER_ID), ARTIST_ID);
+    assertFalse(response.isPresent());
+  }
 
-    EasyMock.replay(cassandraCatalogService);
-    EasyMock.replay(cassandraAccountService);
-    PowerMock.replayAll();
-
-    Optional<ArtistBo> result =
-        artistsService.getArtist(cassandraCatalogService, Optional.of(tc.USER_ID), tc.ARTIST_ID);
-    assertEquals(result, Optional.absent());
+  @Test
+  public void getAlbumTestEmptyMappingResults2() {
+    Mockito.when(cassandraCatalogService.getSongsAlbumsByArtist(ARTIST_ID, Optional.absent()))
+        .thenReturn(Observable.just(resultSet));
+    Mockito.when(cassandraCatalogService.mapSongsAlbumsByArtist(anyObject())).thenReturn(
+        Observable.just(songsAlbumsByArtistDtos));
+    Mockito.when(songsAlbumsByArtistDtos.one()).thenReturn(null);
+    Optional<ArtistBo> response = artistsService.getArtist(Optional.of(USER_ID), ARTIST_ID);
+    assertFalse(response.isPresent());
   }
 
   @Test
   @Ignore
-  public void testGetArtistList() {
-    artistsService.getArtistsList(cassandraCatalogService, Optional.absent(), tc.ITEMS, tc.FACETS,
-        Optional.of(tc.PAGING_STATE_ID));
+  public void getArtistListTest() throws Exception {
+
+    PowerMockito.whenNew(ArtistListBo.class).withAnyArguments().thenReturn(artistListBo);
+    Mockito.when(artistListBo.getBoList()).thenReturn(artistBoList);
+
+    PowerMockito.whenNew(Paginator.class).withAnyArguments().thenReturn(paginator);
+
+    Mockito.when(libraryHelper.getUserArtists(eq(USER_ID))).thenReturn(artistsByUserDtos);
+
+    PowerMockito.when(Translators.translateArtistsByUserDto(artistsByUserDtos)).thenReturn(
+        artistsByUserDtoList);
+
+    Mockito.when(cassandraRatingsService.getAverageRating(ALBUM_ID, ContentType.ARTIST.value))
+        .thenReturn(
+            Observable.just(Optional.of(getMockAverageRatingsDto(ARTIST_ID,
+                ContentType.ARTIST.value))));
+    Mockito
+        .when(cassandraRatingsService.getUserRating(USER_ID, ContentType.ARTIST.value, ALBUM_ID))
+        .thenReturn(
+            Observable.just(Optional.of(getMockUserRatings(ARTIST_ID, ContentType.ARTIST.value))));
+
+    ArtistListBo result =
+        artistsService.getArtistsList(Optional.of(USER_ID), 10, "", Optional.absent());
+    Mockito.verify(libraryHelper, times(1)).processLibraryAlbumInfo(anyObject(), anyObject());
+
+    for (ArtistBo artistBo : result.getBoList()) {
+      assertTrue(artistBo.getAverageRating() == (int) (Long.valueOf(123) / Long.valueOf(123)));
+      assertEquals(artistBo.getPersonalRating(), Integer.valueOf(10));
+    }
   }
 
-  // ================================================================================================================
-  // PAGINATION HELPER METHODS
-  // ================================================================================================================
-
   @Test
-  public void testPrepareFacetedQuery() {
-    artistsService.prepareFacetedQuery(queryAccessor, "~");
-    verify(queryAccessor, atLeastOnce()).artistsByFacet("~");
+  public void prepareFacetedQueryTest() {
+    artistsService.prepareFacetedQuery(queryAccessor, FACETS);
+    Mockito.verify(queryAccessor, times(1)).artistsByFacet(FACETS);
   }
 
   @Test
-  public void testPrepareFeaturedQuery() {
+  public void prepareFeaturedQueryTest() {
     artistsService.prepareFeaturedQuery(queryAccessor);
-    verify(queryAccessor, atLeastOnce()).featuredArtists();
+    Mockito.verify(queryAccessor, times(1)).featuredArtists();
   }
 
   @Test
-  public void testGetFacetedQueryString() {
-    String returned = artistsService.getFacetedQueryString("~");
-    String expected =
-        "SELECT * FROM artists_by_facet WHERE facet_name = '~' AND content_type = 'Artist'";
-    assertEquals(expected, returned);
+  public void getFacetedQueryStringTest() {
+    String response = artistsService.getFacetedQueryString(FACETS);
+    assertTrue(response.contains(FACETS));
   }
 
   @Test
-  public void testGetFeaturedQueryString() {
-    String returned = artistsService.getFeaturedQueryString();
-    String expected =
-        "SELECT * FROM featured_artists WHERE hotness_bucket = 'Hotness01' AND content_type = 'Artist'";
-    assertEquals(expected, returned);
-  }
-
-  private void mockRatingsHelper() throws Exception {
-    PowerMock.mockStatic(CassandraRatingsService.class);
-    cassandraRatingsService = createMock(CassandraRatingsService.class);
-    PowerMock.expectNew(CassandraRatingsService.class).andReturn(cassandraRatingsService);
-
-    expect(CassandraRatingsService.getInstance()).andReturn(cassandraRatingsService).anyTimes();
+  public void getFeaturedQueryStringTest() {
+    String response = artistsService.getFeaturedQueryString();
+    assertFalse(response.isEmpty());
   }
 
 }
